app/styles/new-event.scss
.new-event {
  width: 800px;
  margin: 0 auto;

  @media screen and (max-width: 860px) {
    width: 80%;
    line-height: 40px;
  }

  &__header {
    text-align: left;
    margin: 0 auto;
    margin-top: 200px;
    font-size: 40px;
    color: $pink-primary;

    @media screen and (max-height: 680px) {
      margin-top: 100px;
    }
  }

  &__form {
    text-align: center;
  }

  &__inputs {
    margin-top: 60px;
    color: lighten(black, 40%);
  }

  &__line {
    margin: 30px auto;
    font-size: 20px;
    text-align: left;

    @media screen and (max-width: 860px) {
      margin: 20px auto;
    }
  }

  &__input {
    display: inline-block;
    margin-left: 5px;
  }

  &__date {
    @include line-input($sasuke-blue);
    width: 100px;
    text-align: center;
  }

  &__submit {
    text-align: right;
    margin: 30px auto;

    @media screen and (max-width: 500px) {
      text-align: center;
    }
  }

  &__create {
    margin-top: 25px;
    margin-right: 52px;
    display: inline-block;

    @media screen and (max-width: 860px) {
      margin-right: 15px;
    }
  }

  &__message {
    display: inline-block;
    vertical-align: middle;
    margin-right: 20px;

    &--error {
      font-size: 18px;
      color: $sakura-red;
      font-weight: bold;
    }

    &--filled {
      position: absolute;
      right: 30px;
      bottom: 0;

      @media screen and (max-width: 1200px) {
        top: 0;
        right: 0;
      }
    }
  }
}

